<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NCTU-Assist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="start">開始</string>
	<string name="sel_min">Select the sensor timer:</string>
	<string name="sel_frequency">Frequency of asking question:</string>
	<string name="start_ask_question">Start</string>
	<string name="seldom">seldom</string>
	<string name="often">often</string>
	<string name="usually">usually</string>
	
	<!--- 
		name = activity name
		item0 = 問題題目
		item1 = 過去進行
		item2 = 現在進行
		item3 = 未來進行
		item4 = 無進行
	-->
	<string-array name="Default"> 
		<item>default</item>
		<item>過去進行</item>
		<item>現在進行</item>
		<item>未來進行</item>
		<item>無進行</item>
	</string-array>
	
	<string-array name="Transportation"> 
		<item>Are you in Transportation mode?</item>
		<item>我已經到目的地了~</item>
		<item>對阿,我要上班/出去玩</item>
		<item>沒有耶,還沒出門</item>
		<item>無進行</item>
	</string-array>
	
	<string-array name="Shopping"> 
		<item>Are you in Shopping mode?</item>
		<item>逛了一整天,鐵腿了啦..</item>
		<item>沒錯~~好開心唷!!</item>
		<item>晚一點才要出門逛街</item>
		<item>無進行</item>
	</string-array>
	
	<string-array name="Dining"> 
		<item>Are you in Dining mode?</item>
		<item>I couldn\'t eat any more</item>
		<item>I\'m having now</item>
		<item>not yet, I\'m so hungry</item>
		<item>no</item>
	</string-array>
	
	<string-array name="Working"> 
		<item>Are you in Working mode?</item>
		<item>哈哈~~~早就下班嚕</item>
		<item>....快掛了,好想下班喔</item>
		<item>等一下才要去上班</item>
		<item>無進行</item>
	</string-array>
	
	<string-array name="Sporting"> 
		<item>Are you in Sporting mode?</item>
		<item>今天早就運動完囉</item>
		<item>呼~好喘,等等繼續!!</item>
		<item>等等要出門去揮灑汗水</item>
		<item>無進行</item>
	</string-array>
	
	<string-array name="Entertainment"> 
		<item>Are you in Entertainment mode?</item>
		<item>剛剛已經玩完了~~</item>
		<item>...被你發現了!!</item>
		<item>再等一下!!我忙完再玩</item>
		<item>無進行</item>
	</string-array>
	
</resources>
